Fix spacings

--- a/src/components/Search/SearchResultsPopup/SearchResultsItem/styles.module.scss
+++ b/src/components/Search/SearchResultsPopup/SearchResultsItem/styles.module.scss
@@ -44,8 +44,9 @@
     font-size: 16px;
     font-style: normal;
     font-weight: 700;
-    line-height: 20px;
-    letter-spacing: 0em;
+    line-height: 24px;
+    letter-spacing: 0;
+    margin: 10px 0;
     text-align: left;
     color: #e5e5e5;
   }
@@ -57,7 +58,7 @@
 
 .image {
   width: 100%;
-  height: 70%;
+  height: calc(100% - 88px);
   background-image: url(https://source.unsplash.com/random/800x600);
   background-position: center;
   background-size: cover;
@@ -66,7 +67,7 @@
 
 .footer {
   position: absolute;
-  bottom: 5px;
+  bottom: 8px;
   display: flex;
   justify-content: space-between;
   align-items: center;
