--- a/src/pages/HomePage/Content/RecentStories/styles.module.scss
+++ b/src/pages/HomePage/Content/RecentStories/styles.module.scss
@@ -1,5 +1,4 @@
 .RecentStories {
-  position: relative;
   display: flex;
   height: 250px;
   padding-left: 10px;
