--- a/src/pages/HomePage/MainStory/styles.module.scss
+++ b/src/pages/HomePage/MainStory/styles.module.scss
@@ -43,7 +43,7 @@
       font-style: normal;
       font-weight: bold;
       font-size: 24px;
-      line-height: 30px;
+      line-height: 36px;
       display: flex;
       align-items: center;
       color: #e5e5e5;
@@ -59,8 +59,8 @@
       font-style: normal;
       font-weight: bold;
       font-size: 17px;
-      line-height: 21px;
-      display: flex;
+      line-height: 24px;
+      margin-bottom: 8px;
       align-items: center;
       text-align: center;
       letter-spacing: 0.04em;
